--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 
 	<div class='row-fluid' id='home_first_row' >
 		<div class='span6'>
-			<div id='home_carousel' class='carousel slide with_shadow'>
+			<div id='home_carousel' class='carousel slide xwith_shadow'>
 			  <ol class='carousel-indicators'>
 			    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
 			    <li data-target='#home_carousel' data-slide-to='1'></li>
