--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,10 +24,13 @@
 			    	</div>
 			    </div>
 			    <div class='item' >
-			    	<iframe width="100%" height="309" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen></iframe>
+				    	<iframe width="570" height="321" src="http://www.youtube.com/embed/2t8QH_q2PGs?wmode=opaque&rel=0" frameborder="0" allowfullscreen seamless></iframe>
 			    	<div class='carousel-caption'>
 			    		<p>
-			    			 Co-Executive Director Brad Parks talks about the Media-Based Data Collection project.
+			    			 Co-Executive Director 
+			    			 <%= link_to "Brad Parks talks about the Media-Based Data Collection project &rarr;".html_safe,
+			    			 	"http://youtu.be/2t8QH_q2PGs", target: "_blank" %>
+
 			    		</p>
 			    	</div>
 			    </div>
