--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,10 @@
 		    	    <%=image_tag "home/sudan_heatmap.png"%>
 			    	<div class='carousel-caption'>
 			    		<h4>Coming Soon: Geocoded Data!</h4>
-			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
+			    		<p>
+			    			See
+				    		<%=link_to "preliminary maps", content_by_name_path("geocoding")%>
+			    			of Chinese development finance in Africa &rarr;</p>
 			    	</div>
 			    </div>
 			    <div class='item' >
