--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
 			    	</div>
 			    </div>
 			    <div class='item'>
-			    	<%=image_tag "loan lifecycle.png"%>
+			    	<%=image_tag "home/methodology.png"%>
 			    	<div class='carousel-caption'>
 			    		<h4>Learn more about the initiative</h4>
 			    		<p>See the <%=link_to "methodology", content_by_name_path("methodology")%> behind AidData's work &rarr;</p>
