--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,7 @@
 <% if current_user_is_aiddata_admin %>
 	<p class='row'>
 		<%= link_to "Delete User", @user, method: :delete, confirm: "Are you sure?", class: "btn btn-danger" %>
+		<%= link_to "Edit User", edit_user_path(@user), class: "btn btn-info" %>
 	</p>
 <% end %>
 
