--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "#{ @project.title.blank? ? "(No Title)" : @project.title }") %>
 
+<%  if @project.sources.any? {|s| s.source_type_name == 'Factiva'}
+      flash.now[:notice] = "This project has some sources from #{link_to "Factiva", "https://global.factiva.com/"}. Your university or local library may offer access to that resource."
+    end
+%>
 
 <div class="row project-edit-links pull-right">	
 	<% if (signed_in? && current_user.owner == @project.owner) || (@project.owner.nil? && current_user_is_aiddata) %>
