--- a/app/views/projects/_comment_form.html.erb
+++ b/app/views/projects/_comment_form.html.erb
@@ -20,5 +20,5 @@
     <% end %>
 		<%= f.input :content, label: "Message", input_html: {class: "row", rows: 5} %>
 
-    <%= f.button :submit, "Submit" %>
+    <%= f.button :submit, "Submit", class: "btn btn-info" %>
 <% end %>
