--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -38,7 +38,7 @@
 					%span
 						Value of
 					%strong<>
-						%a{href: "/projects?active_string=Active&oda_like_name=ODA-like&status_name[]=Implementation&status_name[=Pipeline%3A+Commitment&status_name[]=Pipeline%3A+Vague"}<> 
+						%a{href: "/projects?active_string=Active&oda_like_name=ODA-like&status_name[]=Implementation&status_name[]=Pipeline%3A+Commitment&status_name[]=Pipeline%3A+Vague"}<> 
 							ODA-Like commitments
 					%span<>
 						, 2000-2011:
@@ -105,7 +105,7 @@
 					"Completion"
 					"Implementation"
 					"Pipeline: Commitment"
-					"Pipeline/identification"
+					# "Pipeline/identification"
 					"Pipeline: Pledge"
 					"Pipeline: Vague"
 				].join("*")
