--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -106,7 +106,7 @@
 					"Implementation"
 					"Pipeline: Commitment"
 					# "Pipeline/identification"
-					"Pipeline: Pledge"
+					# "Pipeline: Pledge"
 					"Pipeline: Vague"
 				].join("*")
 				year: [2000..2011].join("*")
