--- a/app/views/static_pages/_social_media_logins.html.haml
+++ b/app/views/static_pages/_social_media_logins.html.haml
@@ -1,4 +1,13 @@
 .row-fluid
+  %p.span12
+    Signing in will allow you to
+    %strong
+      leave comments
+    and
+    %strong
+      flag values 
+    in the database. Please use one of these networks to sign in:
+.row-fluid
   %ul.thumbnails
     %li.span3
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/facebook", style: "background-image: url('#{image_path('facebook.png')}')"}
