--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,8 +27,49 @@
 			    	</div>
 			    </div>
 			    <div class='item' >
-				    	<iframe width="570" height="321" src="http://www.youtube.com/embed/2t8QH_q2PGs?wmode=opaque&rel=0" frameborder="0" allowfullscreen seamless></iframe>
-			    	<div class='carousel-caption'>
+			    	<script>
+						var tag = document.createElement('script');
+
+						tag.src = "https://www.youtube.com/iframe_api";
+						var firstScriptTag = document.getElementsByTagName('script')[0];
+						firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+						var player;
+					      function onYouTubeIframeAPIReady() {
+					        player = new YT.Player('player', {
+					          height: '321',
+					          width: '570',
+					          videoId: '2t8QH_q2PGs',
+					          playerVars: {
+					          	'wmode' : 'opaque',
+					          	//'origin' :
+					          },
+					          events: {
+					            'onStateChange': on_youtube_play
+					          }
+					        });
+					      }
+			    		function on_youtube_play(event) {
+			    			//console.log("state Change!", event)
+			    			if (event.data == YT.PlayerState.PLAYING ) {
+				    			//console.log("Youtube playing")
+				    			$('.youtube-caption').slideToggle()
+				    			$('#home_carousel').carousel('pause')
+				    		}
+				    		else if (event.data == YT.PlayerState.PAUSED) {
+				    			//console.log("Youtube paused")
+				    			$('.youtube-caption').slideToggle()
+				    			$('#home_carousel').carousel('cycle')
+				    		}
+			    		}
+
+			    		
+			    	</script>
+			    	<!--iframe id="player" type="text/html" width="570" height="320.625"
+						src="http://www.youtube.com/embed/2t8QH_q2PGs?enablejsapi=1&wmode=opaque"
+						frameborder="0" allowfullscreen ></iframe-->
+						<div id='player'></div>
+				  
+			    	<div class='carousel-caption youtube-caption'>
 			    		<p>
 			    			 Co-Executive Director 
 			    			 <%= link_to "Brad Parks talks about the Media-Based Data Collection project &rarr;".html_safe,
@@ -36,6 +77,7 @@
 
 			    		</p>
 			    	</div>
+
 			    </div>
 			    <div class='item'>
 			    	<%=image_tag "home/methodology.png"%>
