fix publ partial, sitemap url

--- a/app/views/static_pages/_latest_publications.html.haml
+++ b/app/views/static_pages/_latest_publications.html.haml
@@ -11,4 +11,4 @@
 						= a.name
 					= "."
 				%span.muted
-					= "#{a.data["type"]} &ndash; #{a.data["publisher"]}, #{a.data["date"]}".html_safe
+					= "#{a.data["type"]} &ndash; #{a.data["publisher"] ? "#{a.data["publisher"]}," : "" } #{a.data["date"]}".html_safe
