sort by time, rake task for csv_text

--- a/app/views/static_pages/_latest_articles.html.haml
+++ b/app/views/static_pages/_latest_articles.html.haml
@@ -1,5 +1,5 @@
 
-- latest_articles = Content.find_all_by_content_type("News Article").sort {|a, b| b.data["date"] <=> a.data["date"]}[0..2]
+- latest_articles = Content.find_all_by_content_type("News Article").sort {|a, b| (b.data['date'] && a.data['date']) ? b.data["date"].to_time <=> a.data["date"].to_time : ( a.data["date"] ? -1 : 1 )}[0..2]
 %ul.unstyled.recent_resources
 	- latest_articles.each do |a|
 		%li
