--- a/app/views/static_pages/_latest_publications.html.haml
+++ b/app/views/static_pages/_latest_publications.html.haml
@@ -1,5 +1,5 @@
 
-- latest_publications = Content.where('content_type in(?)', ["Affiliate Publication", "AidData Publication"]).sort {|a, b| b.data["date"] <=> a.data["date"]}[0..2]
+- latest_publications = Content.where('content_type in(?)', ["Affiliate Publication", "AidData Publication"]).sort {|a, b| (b.data['date'] && a.data['date']) ? b.data["date"] <=> a.data["date"] : ( a.data["date"] ? -1 : 1 )}[0..2]
 %ul.unstyled.recent_resources
 	- latest_publications.each do |a|
 		%li
