--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -1,12 +1,5 @@
 
 #vitals
-
-= javascript_include_tag 'underscore/index'
--# nice_money depends on d3:
-= javascript_include_tag 'd3/index'
-
-
-%script#vitals-template{ type: 'text/template'}
 	.row-fluid
 		.span12.alert.alert-info
 			-#
@@ -15,57 +8,64 @@
 				%small.pull-right
 					%i Hover to see all stats
 			%ul.unstyled.marquee
-				%li
-					%span
-						Chinese 
-					%strong><
-						%a{href: "/projects?scope_names[]=Official Finance"}><
-							official finance projects 
-					, 2000-2011:
-					%span.official#count.text-success
-						<%= official.count %>
-				%li
-					Amounting to 
-					%strong 
-						%a{href: "/projects?scope_names[]=Official Finance"}<> 
-							financial commitments
-					of:
-					%span.official#usd_2009.text-success
-						$<%= nice_money(official.usd_2009) %>
-					-# %small 
-						-# (USD-2009)
-				%li
-					%span
-						Value of
-					%strong<>
-						%a{href: "/projects?active_string=Active&oda_like_name=ODA-like&status_name[]=Implementation&status_name[]=Pipeline%3A+Commitment&status_name[]=Pipeline%3A+Vague"}<> 
-							ODA-Like commitments
-					%span<>
-						, 2000-2011:
-					%span.oda_like#usd_2009.text-success
-						$<%= nice_money(oda_like.usd_2009) %>
-					-# %small
-						-# (USD-2009)
-				%li
-					%span
-						Projects 
-					%strong<> 
-						%a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<>
-							implemented or completed
-					%span><
-						, 2000-2011:
-					%span.implemented_or_completed#percent.text-success
-						<%= implemented_or_completed.percent %>%
-				%li 
-					Value of
-					%strong 	
-						%a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<
-							implemented/completed 
-					projects:
-					%span.implemented_or_completed#usd_2009.text-success<
-						$<%= nice_money(implemented_or_completed.usd_2009) %>
-					-# %small
-						-# (USD-2009)
+
+= javascript_include_tag 'underscore/index'
+-# nice_money depends on d3:
+= javascript_include_tag 'd3/index'
+
+
+%script#vitals-template{ type: 'text/template'}
+	%li
+		%span
+			Chinese 
+		%strong><
+			%a{href: "/projects?scope_names[]=Official Finance"}><
+				official finance projects 
+		, 2000-2011:
+		%span.official#count.text-success
+			<%= official.count %>
+	%li
+		Amounting to 
+		%strong 
+			%a{href: "/projects?scope_names[]=Official Finance"}<> 
+				financial commitments
+		of:
+		%span.official#usd_2009.text-success
+			$<%= nice_money(official.usd_2009) %>
+		-# %small 
+			-# (USD-2009)
+	%li
+		%span
+			Value of
+		%strong<>
+			%a{href: "/projects?active_string=Active&oda_like_name=ODA-like&status_name[]=Implementation&status_name[]=Pipeline%3A+Commitment&status_name[]=Pipeline%3A+Vague"}<> 
+				ODA-Like commitments
+		%span<>
+			, 2000-2011:
+		%span.oda_like#usd_2009.text-success
+			$<%= nice_money(oda_like.usd_2009) %>
+		-# %small
+			-# (USD-2009)
+	%li
+		%span
+			Projects 
+		%strong<> 
+			%a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<>
+				implemented or completed
+		%span><
+			, 2000-2011:
+		%span.implemented_or_completed#percent.text-success
+			<%= implemented_or_completed.percent %>%
+	%li 
+		Value of
+		%strong 	
+			%a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<
+				implemented/completed 
+		projects:
+		%span.implemented_or_completed#usd_2009.text-success<
+			$<%= nice_money(implemented_or_completed.usd_2009) %>
+		-# %small
+			-# (USD-2009)
 
 
 :coffee
@@ -169,7 +169,7 @@
 			template = _.template($('#vitals-template').html(), vitals)
 			
 
-			$('#vitals').append(template)
+			$('#vitals ul').append(template)
 			marquee.create('.marquee')
 
 	@marquee =
