Ensure checked scope when landing

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -102,7 +102,9 @@ end %>
 
 	$('.scope-tooltip, .facet-tooltip').tooltip()
 
-
+	<% params[:scope_names].each do |scope_name| %>
+		$('.facet-list-item .scope_names[value="<%= scope_name %>"]').prop("checked", "true")
+	<% end %>
 
 	$('.facet-list-item').click(function() {
 		this_facet = $(this).find('.search_check').attr("name").replace(/\[\]/g, '')
