--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,8 @@
 	$('body')
 		.css('background-image', 'url("<%= image_path "gray_to_white.png" %>")')
 </script>
-
+	
+<% cache do %>
 	<div class='row-fluid' id='home_first_row' >
 		<div class='span6'>
 			<div id='home_carousel' class='carousel slide xwith_shadow'>
@@ -17,7 +18,7 @@
 
 
 			    <div class='active item'>
-		    	    <%=image_tag "home/sudan_heatmap.png"%>
+		    	    <%=image_tag "home/sudan_heatmap_small.jpg"%>
 			    	<div class='carousel-caption'>
 			    		<h4>Coming Soon: Geocoded Data!</h4>
 			    		<p>
@@ -87,7 +88,7 @@
 			    	</div>
 			    </div>
 			    <div class='item'>
-			    	<%=image_tag "improve_the_data.png"%>
+			    	<%=image_tag "home/improve_the_data_small.jpg"%>
 			    	<div class='carousel-caption'>
 			    		<h4>Help us improve our dataset</h4>
 			    		<p>Help us expand the database!  <%=link_to "Learn more here", content_by_name_path("improving_the_data")%>.</p>
@@ -150,7 +151,7 @@
 		<li class='span3' id='project_button' >
 			<a href="<%= projects_path %>" class="thumbnail with_shadow">
 				<h4>Project-Level Data &rarr;</h4>
-				<%= image_tag("project_button_with_padding.jpg", :alt => "Project Pages") %>
+				<%= image_tag("project_button_small.jpg", :alt => "Project Pages") %>
 			</a>
 		</li>
 		<li class='span3'>
@@ -161,7 +162,7 @@
 		</li>
 	</ul>
 </div>
-
+<% end %>
 <div class='row-fluid' id='home_media'>
 	<div class='span12 row-fluid well'>
 		<div class='span4'>
