--- a/app/views/projects/_search_facet.html.erb
+++ b/app/views/projects/_search_facet.html.erb
@@ -1,6 +1,5 @@
 <div class='search-facet'>
-	<% if f[:name]!= "" &&
-			rows = @all_projects.facet(f[:sym]).rows %>
+	<% if (these_facet_values = @project_facet_counts[f[:sym]]) %>
 		<b class='facet-header facet-tooltip' title='<%= f[:description] %>'>
 			<%= 
 				link_to_function f[:name], 
@@ -15,24 +14,24 @@
 			class: "facet-controller" %>
 		<%= link_to_function "Unselect all", "$(this).siblings('ul').find('input').prop('checked', false);update_check_counter_for('#{f[:sym].to_s}')", class: "facet-controller" %>
 		<ul class='unstyled facet-list'>
-			<% rows.sort!{|a,b| a.value <=> b.value}.each do |row| %>
+			<% these_facet_values.each do |value| %>
 				<li class='facet-list-item'>
 					<label class='checkbox'>
 						<input 
 							type="checkbox" 
 							name="<%= f[:sym].to_s %>[]" 
-							value="<%= row.value %>"
+							value="<%= value %>"
 							class="search_check boolean <%= f[:sym].to_s %>"
 							<% if (
-									@current_url_human_readable.include?("#{f[:sym].to_s}[]=#{row.value}")||
-									@current_url_human_readable.include?("#{f[:sym].to_s}=#{row.value}")
+									@current_url_human_readable.include?("#{f[:sym].to_s}[]=#{value}")||
+									@current_url_human_readable.include?("#{f[:sym].to_s}=#{value}")
 									) %>
 								checked='true'
 							<% end %>
 						>
-						<%= row.value %>
+						<%= value %>
 						<span style='font-weight:normal;'>
-							<% if @search.facet(f[:sym]) && this_row = @search.facet(f[:sym]).rows.select { |r| r.value == row.value}[0]  %>
+							<% if @search.facet(f[:sym]) && this_row = @search.facet(f[:sym]).rows.select { |r| r.value == value}[0]  %>
 								(<%= this_row.count %>)
 							<% else %>
 								(0)
