--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -77,7 +77,7 @@
 				verified: "Checked"
 				flow_class: [
 					"ODA-like"
-					"Official investment"
+					# "Official Investment"
 					"OOF-like"
 					"Vague (Official Finance)"
 					].join("*")
