--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -1,9 +1,12 @@
 #recent-changes
   %h3.text-warning
-    Recent Changes
+    Recent Changes:
     %small.pull-right
       %i Hover to see all changes
   %ul.unstyled
+    %li
+      %i.muted 
+        Loading...
 
 %script#recent-item{type: 'text/template'}
   %li.change
