--- a/app/views/projects/_project_files.html.erb
+++ b/app/views/projects/_project_files.html.erb
@@ -1,4 +1,4 @@
-<% p "Files for {@project.id}" %>
+<% p "Files for #{@project.id}" %>
 <div class='well well-small'>
 	<h3>Files:</h3>
 	<ul id='files' class='unstyled'>
