require coffee-filter

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -103,15 +103,14 @@
 
 			<div class='row-fluid'>
 				<div class=''>
-					<% 
-					#render 'vital_stats' 
+					<%= 
+						render 'vital_stats' 
 					%>
 				</div>
 			</div>
 			<div class='row-fluid'>
 				<div class=' alert alert-warning'>
-					<%= 
-					#render 'shared/recent'
+					<%= render 'shared/recent'
 					 %>
 				</div>
 			</div>
