Add link to exports

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -112,3 +112,5 @@
                   = link_to "Users", users_path
                 %li
                   = link_to "<i>Pending Content</i>".html_safe, review_entries_path
+                %li
+                  = link_to "Exports", exports_path
