--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -87,8 +87,15 @@
                     = link_to "Geocoded Data", content_by_name_path("geocoding")
               %li
                 = link_to "Publications", content_by_name_path("publications")
-              %li
-                = link_to "Media", content_by_name_path("media")
+              %li.dropdown
+                %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
+                  Media
+                  %i.caret
+                %ul.dropdown-menu
+                  %li
+                    = link_to "In the news", content_by_name_path("media")
+                  %li
+                    = link_to "Multimedia", content_by_name_path("multimedia")
               
               - if signed_in? 
                 %li
