--- a/app/views/static_pages/_circle_grid.html.haml
+++ b/app/views/static_pages/_circle_grid.html.haml
@@ -1,3 +1,5 @@
+- title = "Explore Chinese Finance"
+- provide :title, title
 :css
 	#grid_tooltip {
 		position: absolute;
@@ -34,7 +36,7 @@
 	}
 
 %h1.page-header 
-	Correlates of Chinese Finance
+	= title
 .row-fluid
 	.span12.container-fluid.well.well-small
 		.row-fluid
