--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -69,6 +69,8 @@
                   %li 
                     = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")  
                   %li
+                    = link_to "Citing the Data", (content_by_name_path("frequently_asked_questions") + '#how_should_i_cite_your_database')
+                  %li
                     = link_to "Glossary", content_by_name_path("glossary") 
                   %li.divider
                   %li
