--- a/app/views/static_pages/_aggregate_exporter.html.haml
+++ b/app/views/static_pages/_aggregate_exporter.html.haml
@@ -130,10 +130,12 @@
 		
 		
 		if (filter_values.length>0)
-			{ filter_values.forEach(function(v) {param_values.push(v) }) }
+			{ filter_values.forEach(function(v) {param_values.push(v.replace(/&/, "%26") ) }) } // For sao tome & principe
 		
 						
 		param_string=decodeURIComponent($.param(param_values)).replace(/\+\+/g, "+%2B") // for CA +SOE which is turned into CA++SOE without this.
+
+		
 		return  param_string
 	}
 
