--- a/app/views/review_entries/index.haml
+++ b/app/views/review_entries/index.haml
@@ -1,6 +1,6 @@
-- provide :title, "Review Items"
+- provide :title, "Pending Content"
 %h1.page-header
-  Review Items
+  Pending Content
 
 - @review_sections.each do |type, entries|
   %h2= type.pluralize
@@ -18,6 +18,7 @@
         - else 
           - atts.delete("id")
           - atts.delete("updated_at")
+          - atts.delete("owner_id")
           - atts.each do |key,value|
             - case key
             - when "flaggable_id"
@@ -29,7 +30,7 @@
         %tr{id: "#{type}#{index}"}
           %td
             %input{type: "checkbox", value: "yes" }
-          %td= entry.id
+          %td= link_to(entry.id, review_entry_path(entry))
           - if type == "Project"
             %td= entry.item.title
             - url_list = ""
@@ -39,6 +40,7 @@
             - atts = entry.item.attributes
             - atts.delete("id")
             - atts.delete("updated_at")
+            - atts.delete("owner_id")
             - atts.each do |att|
               - key = att[0]
               - value = att[1]
@@ -80,9 +82,7 @@
   });
   
   function manageRow(row, approved){
-    console.log(row)
-    console.log(approved)
-    var id = $(row).children()[1].innerHTML;
+    var id = $(row).children()[1].textContent;
     var review_url = "/review_entries/" + id
     if (approved == "Approve")
     {
